Bug 703202 - ARIA comboboxes don't fire value change events, r=tbsaunde, marcoz